--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,5 +2,6 @@
     <string name="app_name">روتر</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="Error_NoPermission">به دلیل عدم تایید دسترسی انجام عملیات ممکن نیست !</string>
 
 </resources>
